--- a/styls/protfolio.css
+++ b/styls/protfolio.css
@@ -78,7 +78,11 @@ nav a{
     font-style: normal;
     font-weight: 700;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
 }
 .pra{
     font-size:20px;
@@ -88,4 +92,11 @@ nav a{
     border-radius: 10px;
     background: #FFF8F3;
     margin:130px 0;
+}
+.about-info-conteinar{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
